Fixed spacing for main content

--- a/styles/style.css
+++ b/styles/style.css
@@ -128,22 +128,18 @@ h2 {
   margin-bottom: 1.5rem;
 }
 
-main h3 {
-  margin-bottom: .5rem;
+h3 {
+  margin: 0;
+  text-decoration: underline;
 }
 
-#cocktails h4, #punch h4 {
-  margin-top: 1rem;
+h4 {
   margin-bottom: 0;
+  text-decoration: underline dotted;
 }
 
-#cocktails, #punch  {
-  margin-bottom: .9rem;
-}
-
-h4 + ul, main p {
-  margin-top: 0;
-  padding-top: 0;
+dl {
+  margin: .5rem;
 }
 
 dt {
@@ -151,12 +147,12 @@ dt {
 }
 
 dd {
-  padding: .2rem;
-  margin-bottom: .5rem;
+  margin: 0 0 1rem 0;
 }
 
 .tilde {
   font-size: 2rem;
+  margin-bottom: 1rem;
 }
 
 
